--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-07 19:20:48,455\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-10 01:23:08,083\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
       "{33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}},\n",
       " 18: {'val': {'accuracy': 91.54, 'F1-score': 88.72, 'loss': 0.23}},\n",
       " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
@@ -3055,13 +3055,13 @@
       " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}}}\n",
       "{'val': {'accuracy': 91.51, 'F1-score': 88.69, 'loss': 0.23}}\n",
       "---------TWR---------\n",
-      "2024-05-07 19:20:48,458\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
-      "best_sedds_of_stage1:  33 18 78 23 31\n",
+      "2024-05-10 01:23:08,086\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "best_sedds_of_stage1:  33 18 78 31 23\n",
       "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
       " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
       " 78: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
-      " 23: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
-      " 31: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.01}}}\n",
+      " 31: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.01}},\n",
+      " 23: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}}}\n",
       "{'val': {'accuracy': 91.44, 'F1-score': 88.66, 'loss': 1.03}}\n"
      ]
     }
@@ -3106,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3114,7 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "21 12 52 6 15\n",
+      "21 12 52 15 6\n",
       "{18: {'val': {'acc_pipline': 91.54, 'f1_pipline': 88.63, 'accuracy': 91.52, 'F1-score': 88.53, 'loss': 1.22}},\n",
       " 33: {'val': {'acc_pipline': 91.56, 'f1_pipline': 88.68, 'accuracy': 91.49, 'F1-score': 88.49, 'loss': 1.2}},\n",
       " 23: {'val': {'acc_pipline': 91.65, 'f1_pipline': 88.82, 'accuracy': 91.48, 'F1-score': 88.53, 'loss': 1.19}},\n",
@@ -37349,6 +37349,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## QQP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-10 01:24:13,935\u001b[32m <INFO> Configuration: 👻 Custom attributes:\u001b[0m\n",
+      "2024-05-10 01:24:13,936\u001b[32m <INFO> Configuration:    text_type=ORI\u001b[0m\n",
+      "2024-05-10 01:24:13,936\u001b[32m <INFO> Configuration:    min_threshold=None\u001b[0m\n",
+      "2024-05-10 01:24:13,937\u001b[32m <INFO> Configuration:    alpha=None\u001b[0m\n",
+      "2024-05-10 01:24:13,937\u001b[32m <INFO> Configuration:    part=all\u001b[0m\n",
+      "2024-05-10 01:24:13,938\u001b[32m <INFO> Configuration:    auxloss_warmup_steps=1\u001b[0m\n",
+      "2024-05-10 01:24:13,938\u001b[32m <INFO> Configuration:    total_num_steps=68223\u001b[0m\n",
+      "2024-05-10 01:24:13,939\u001b[32m <INFO> Configuration:    steps_per_epoch=22741\u001b[0m\n",
+      "2024-05-10 01:24:13,939\u001b[32m <INFO> Configuration:    training_runtime={'cur_step': 68223, 'cur_epoch': 2}\u001b[0m\n",
+      "2024-05-10 01:24:14,050 <DEBUG> TextDataset: ⏳ Loading VALIDATION dataset ...\u001b[0m\n",
+      "2024-05-10 01:24:14,051 <DEBUG> TextDataset: Model max length: 512\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7ee8d3564694817bb4ca04a007f0b55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tokenize VALIDATION input texts:   0%|          | 0/121290 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-10 01:24:32,012 <DEBUG> TextDataset: ⌛ Loading VALIDATION data takes 17.96 sec.\u001b[0m\n",
+      "2024-05-10 01:24:32,013\u001b[32m <INFO> [toolkit]: Total VALIDATION data: 121290\u001b[0m\n",
+      "2024-05-10 01:24:32,014\u001b[32m <INFO> [toolkit]: Max length of input: 185\u001b[0m\n",
+      "2024-05-10 01:24:32,014\u001b[32m <INFO> [toolkit]: Max length of label: 1\u001b[0m\n",
+      "2024-05-10 01:24:32,550\u001b[32m <INFO> [toolkit]: ✂️  Truncating VALIDATION data: cnt=0, input_len=185, label_len=1\u001b[0m\n",
+      "2024-05-10 01:24:32,552\u001b[32m <INFO> [toolkit]: Total VALIDATION data: 121290\u001b[0m\n",
+      "2024-05-10 01:24:32,552\u001b[32m <INFO> [toolkit]: Max length of input: 185\u001b[0m\n",
+      "2024-05-10 01:24:32,553\u001b[32m <INFO> [toolkit]: Max length of label: 1\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "defc47fd5316455d9205b297876f74c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VALIDATION:   0%|          | 0/1896 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/18/optimal_checkpoint\n",
+      "{'accuracy': 84.53953334982273, 'F1-score': 76.88134924548771, 'loss': 0.5915254448552297}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a711b8ddfe754f6f8c46a567feeb1405",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VALIDATION:   0%|          | 0/1896 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/18/optimal_checkpoint\n",
+      "{'accuracy': 90.54250144282298, 'F1-score': 87.46407300147531, 'loss': 0.2657156843193001}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b20c745d70d048018be02db5d0918388",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VALIDATION:   0%|          | 0/1896 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=18/1/16/2e-06/12/optimal_checkpoint\n",
+      "{'accuracy': 90.52601203726606, 'F1-score': 87.17937274765978, 'loss': 0.31105659062088026}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from load_data_fns import LOAD_DATA_FNS, DatasetName, TextType\n",
+    "\n",
+    "# from torch.utils.data import DataLoader\n",
+    "from transformers import RobertaTokenizer\n",
+    "from toolkit.nlp import TextDataset\n",
+    "from toolkit.nlp import NLPTrainingConfig\n",
+    "from toolkit.enums import Split\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "# from toolkit.training import Evaluator\n",
+    "from model.MatchModel_binary_classification import RobertaModel_rephrase, BertModel_rephrase, BertModel_binary_classify, RobertaModel_binary_classify\n",
+    "\n",
+    "from toolkit.enums import Split\n",
+    "from utils.evaluate import Evaluator1\n",
+    "\n",
+    "\n",
+    "split = \"val\"\n",
+    "model_paths = [\n",
+    "    \"outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/18/optimal_checkpoint\",\n",
+    "    \"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/18/optimal_checkpoint\",\n",
+    "    \"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=18/1/16/2e-06/12/optimal_checkpoint\",\n",
+    "]\n",
+    "config = NLPTrainingConfig.load(model_paths[0])\n",
+    "model_type = config.model_type\n",
+    "dataset_name = config.dataset_name\n",
+    "config.text_type = \"EXTRAL_EVAL\"\n",
+    "# config.test_file_path=\"./data/LCQMC/test/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_paths[0])\n",
+    "\n",
+    "dataset = TextDataset.from_file(\n",
+    "    config.test_file_path if split == \"test\" else config.val_file_path,\n",
+    "    tokenizer,\n",
+    "    split=Split.TEST if split == \"test\" else Split.VALIDATION,\n",
+    "    configs=config,\n",
+    "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
+    "    text_type=TextType[config.text_type],\n",
+    "    dataset_name=DatasetName[config.dataset_name],\n",
+    "    use_cache=False,\n",
+    ")\n",
+    "dataset.report()\n",
+    "\n",
+    "for model_path in model_paths:\n",
+    "    if \"bert-base\" in model_type:\n",
+    "        model = BertModel_binary_classify.from_pretrained(model_path)\n",
+    "    elif \"roberta\" in model_type:\n",
+    "        model = RobertaModel_binary_classify.from_pretrained(model_path)\n",
+    "    config.batch_size_infer = 96\n",
+    "    Evaluator1.confused_use_ot = True\n",
+    "    Evaluator1.save_results = False\n",
+    "    evaluator = Evaluator1(\n",
+    "        \"classify\",\n",
+    "        Split.VALIDATION if split == \"val\" else Split.TEST,\n",
+    "        config=config,\n",
+    "        model=model,\n",
+    "        tokenizer=tokenizer,\n",
+    "        dataset=dataset,\n",
+    "        extral_args_evaluation={\"is_train\": False},\n",
+    "    )\n",
+    "    metric_dict = evaluator.eval(cuda_id=4)\n",
+    "    print(model_path)\n",
+    "    print(metric_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## MRPC"
    ]
   },
@@ -37531,6 +37719,13 @@
     "    print(model_path)\n",
     "    print(metric_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
