--- a/aio.ipynb
+++ b/aio.ipynb
@@ -12,6 +12,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence1</th>\n",
+       "      <th>sentence2</th>\n",
+       "      <th>label</th>\n",
+       "      <th>rephrase1</th>\n",
+       "      <th>rephrase2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amrozi accused his brother , whom he called \" ...</td>\n",
+       "      <td>Referring to him as only \" the witness \" , Amr...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Amrozi accused his brother, who he referred to...</td>\n",
+       "      <td>Amrozi accused his brother of deliberately dis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Yucaipa owned Dominick 's before selling the c...</td>\n",
+       "      <td>Yucaipa bought Dominick 's in 1995 for $ 693 m...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Before being sold to Safeway for $2.5 billion ...</td>\n",
+       "      <td>In 1995, Yucaipa acquired Dominick's for $693 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           sentence1  \\\n",
+       "0  Amrozi accused his brother , whom he called \" ...   \n",
+       "1  Yucaipa owned Dominick 's before selling the c...   \n",
+       "\n",
+       "                                           sentence2  label  \\\n",
+       "0  Referring to him as only \" the witness \" , Amr...      1   \n",
+       "1  Yucaipa bought Dominick 's in 1995 for $ 693 m...      0   \n",
+       "\n",
+       "                                           rephrase1  \\\n",
+       "0  Amrozi accused his brother, who he referred to...   \n",
+       "1  Before being sold to Safeway for $2.5 billion ...   \n",
+       "\n",
+       "                                           rephrase2  \n",
+       "0  Amrozi accused his brother of deliberately dis...  \n",
+       "1  In 1995, Yucaipa acquired Dominick's for $693 ...  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_json(\"data/MRPC/train/qwen_with_rephrase_clean_nodrop.jsonl\", lines=True)\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[\"length\"] = df[\"question1\"].str.len() + df[\"question2\"].str.len()\n",
+    "df[\"length\"] = df[\"sentence1\"].str.len() + df[\"sentence2\"].str.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Only Intel Corp. has a lower dividend yield .\n",
+      "Only Intel 's 0.3 percent yield is lower .\n",
+      "-----------------------------------------------------\n",
+      "Moore had no immediate comment Tuesday .\n",
+      "Moore did not have an immediate response Tuesday .\n",
+      "-----------------------------------------------------\n",
+      "Every day more American soldiers die .\n",
+      "We 're losing one or two American soldiers every day .\n",
+      "-----------------------------------------------------\n",
+      "Three no votes would kill it for now .\n",
+      "It would take three votes to kill the ACC 's expansion .\n",
+      "-----------------------------------------------------\n",
+      "Druce will face murder charges , Conte said .\n",
+      "Conte said Druce will be charged with murder .\n",
+      "-----------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, row in df[(df[\"length\"] > 0) & (df[\"length\"] < 100) & (df[\"label\"] == 1)].iterrows():\n",
+    "    # print(row[\"question1\"])\n",
+    "    # print(row[\"question2\"])\n",
+    "    # print(\"-----------------------------------------------------\")\n",
+    "    print(row[\"sentence1\"])\n",
+    "    print(row[\"sentence2\"])\n",
+    "    print(\"-----------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
