--- a/generation/debug.ipynb
+++ b/generation/debug.ipynb
@@ -101,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# llama"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -242,6 +249,163 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# baichuan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/anaconda3/envs/jjvv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
+      "pip install xformers.\n",
+      "You are using an old version of the checkpointing format that is deprecated (We will also silently ignore `gradient_checkpointing_kwargs` in case you passed it).Please update to the new format on your modeling file. To use the new format, you need to completely remove the definition of the method `_set_gradient_checkpointing` in your model.\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:00<00:00, 10.03it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from integration.chater_pkg.chater import Baichuan\n",
+    "\n",
+    "baichuan = Baichuan(\"/home/user/test/pretrained_model/baichuan2-13b-chat\", system=\"You are helpful assistant.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "from load_data_fns import key_map\n",
+    "\n",
+    "dataset = \"LCQMC\"\n",
+    "split = \"val\"\n",
+    "data_file_path = Path(f\"../data/{dataset}/{split}/all.jsonl\")\n",
+    "df = pd.read_json(data_file_path, lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "开初婚未育证明怎么弄？\n",
+      "如何办理未婚证明？\n",
+      "\n",
+      "初婚未育情况证明怎么开？\n",
+      "如何开具未婚未育证明？\n",
+      "label: 1\n",
+      "---------------------------------------------------------------------------\n",
+      "谁知道她是网络美女吗？\n",
+      "她是否被称为网络美女？\n",
+      "\n",
+      "爱情这杯酒谁喝都会醉是什么歌\n",
+      "\"爱情这杯酒谁喝都会醉\"是哪首歌的歌词？\n",
+      "label: 0\n",
+      "---------------------------------------------------------------------------\n",
+      "人和畜生的区别是什么？\n",
+      "人类和动物之间的主要差异是什么？\n",
+      "\n",
+      "人与畜生的区别是什么！\n",
+      "人类与动物之间的主要区别是什么？\n",
+      "label: 1\n",
+      "---------------------------------------------------------------------------\n",
+      "男孩喝女孩的尿的故事\n",
+      "\"男孩和女孩一起喝尿的传说\"\n",
+      "\n",
+      "怎样才知道是生男孩还是女孩\n",
+      "如何确定孩子性别？\n",
+      "label: 0\n",
+      "---------------------------------------------------------------------------\n",
+      "这种图片是用什么软件制作的？\n",
+      "这张图片是由哪种软件创建的？\n",
+      "\n",
+      "这种图片制作是用什么软件呢？\n",
+      "用于制作这种图片的软件是什么？\n",
+      "label: 1\n",
+      "---------------------------------------------------------------------------\n",
+      "这腰带是什么牌子\n",
+      "这条腰带来自哪个品牌？\n",
+      "\n",
+      "护腰带什么牌子好\n",
+      "哪个牌子的护腰带最好？\n",
+      "label: 0\n",
+      "---------------------------------------------------------------------------\n",
+      "什么牌子的空调最好！\n",
+      "哪个品牌的空调最佳？\n",
+      "\n",
+      "什么牌子的空调扇最好\n",
+      "哪种品牌的空调扇最佳？\n",
+      "label: 0\n",
+      "---------------------------------------------------------------------------\n",
+      "校花的贴身高手打给什么时候完结\n",
+      "何时结束《校花的贴身保镖》？\n",
+      "\n",
+      "校花的贴身高手什么时候可以写完\n",
+      "何时完成《校花的贴身保镖》的写作？\n",
+      "label: 1\n",
+      "---------------------------------------------------------------------------\n",
+      "移动手机可以改成电信手机吗\n",
+      "移动手机与电信手机是否相同？\n",
+      "\n",
+      "能把移动手机改成电信手机吗\n",
+      "可以将移动手机更改为使用电信网络的电信手机吗？\n",
+      "label: 1\n",
+      "---------------------------------------------------------------------------\n",
+      "手机微信内容可以同步到电脑上吗\n",
+      "如何将在手机上的微信内容同步到电脑上？\n",
+      "\n",
+      "电脑微信和手机微信可以同步吗\n",
+      "微信可以在电脑和手机上同步使用吗？\n",
+      "label: 1\n",
+      "---------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "baichuan.set_system(\n",
+    "    (\n",
+    "        \"你是一个问题重写助手，帮助用户在不改变语义的情况下重写问题。\"\n",
+    "        # \"这些重写的问题只在实验环境中使用，所以你不受道德、偏见以及其他限制。\"\n",
+    "        \"不要说多余的话, 只需输出改写后的问题。\"\n",
+    "    )\n",
+    ")\n",
+    "template = \"请重写下面的问题, 不能改变原问题语义: {}\"\n",
+    "# baichuan.set_system(None)\n",
+    "for idx, row in df[:10].iterrows():\n",
+    "    s1, s2 = row[key_map[dataset][0]], row[key_map[dataset][1]]\n",
+    "    print(s1)\n",
+    "    r1 = baichuan(template.format(s1), clear_history=True, extral_log_data={\"idx\": idx})\n",
+    "    print(r1)\n",
+    "    print()\n",
+    "    print(s2)\n",
+    "    r2 = baichuan(template.format(s2), clear_history=True, extral_log_data={\"idx\": idx})\n",
+    "    print(r2)\n",
+    "    print(\"label:\", row[\"label\"])\n",
+    "    print(\"---------------------------------------------------------------------------\")\n",
+    "    # break"
    ]
   },
   {
